[package]
name = "aw-time-limit"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "awtl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "^4.5.2"
reqwest = { version = "^0.11.4", features = ["blocking"] }
chrono = "^0.4.19"
